# Audiobooks

./: .bumpversion.cfg  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  __main__.py  database.py  log_manager.py  logger.py  models.py  mypy.ini  populate_test_database.py  pyproject.toml  setup.cfg  test.sqlite
.github/: dependabot.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: approve-skipped-checks.yml  ci-bot-auto-merge.yml  codeql-analysis.yml  dependabot-auto-merge.yml  setup-poetry.yml  tests.yml
audiobooks/: __init__.py  __main__.py  app.py  configuration.py  database.py  db_tests.py  extensions.py  log.py  models.py  populate_test_database.py
audiobooks/main_page/: __init__.py  routes.py
logs/: __init__.py  log_manager.py
myfunctions/: __init__.py  log_manager.py
src/audiobooks/: __init__.py  __main__.py  database.py
src/audiobooks/main_page/: routes.py
tests/: __init__.py  configuration.py  conftest.py  test_database.py  test_library_models.py  test_library_routes.py  test_main_routes.py
tests/audiobooks/: test_log.py
